--- a/App Expired Popup.json
+++ b/App Expired Popup.json
@@ -12,7 +12,7 @@
 ◎〈外部背景透明〉开〈/外部背景透明〉
 
 
-◎〈标题〉𝘣𝘪𝘯1𝘴𝘪𝘵𝘦_𝘮𝘰𝘥〈/标题〉
+◎〈标题〉bin1site1.github.io〈/标题〉
 
 ◎〈标题颜色〉#99FFFF 〈/标题颜色〉
 
@@ -40,16 +40,16 @@
 
 ◎〈拒绝按钮颜色〉#2e7d32〈/拒绝按钮颜色〉
 
-◎〈拒绝按钮事件〉网址https: //pd.qq.com/s/dhe0utlrz〈/拒绝按钮事件〉
+◎〈拒绝按钮事件〉网址https://pd.qq.com/s/dhe0utlrz〈/拒绝按钮事件〉
 
 
 ◎〈中立按钮〉开〈/中立按钮〉
 
-◎〈中立按钮文本〉关注𝘣𝘪𝘯1𝘴𝘪𝘵𝘦官网〈/中立按钮文本〉
+◎〈中立按钮文本〉关注bin1site官网〈/中立按钮文本〉
 
 ◎〈中立按钮颜色〉#1565c0〈/中立按钮颜色〉
 
-◎〈中立按钮事件〉网址https: //bin1site1.github.io〈/中立按钮事件〉
+◎〈中立按钮事件〉网址https://bin1site1.github.io〈/中立按钮事件〉
 
 
 〈/弹窗配置〉
